--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-qiskit>=0.36.2
-qiskit-ibm-runtime>=0.4.0
-qiskit-nature[pyscf]>=0.3.0
-qiskit-machine-learning>=0.3.0
-qiskit-optimization>=0.3.0
+qiskit==0.36.2
+qiskit-ibm-runtime==0.4.0
+qiskit-nature[pyscf]==0.3.0
+qiskit-machine-learning==0.3.0
+qiskit-optimization==0.3.0
 notebook
 matplotlib>=3.0.0
