--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-qiskit==0.36.2
+qiskit[visualization]==0.36.2
 qiskit-ibm-runtime==0.5.0
 qiskit-nature[pyscf]==0.3.0
 qiskit-machine-learning==0.3.0
